--- a/css/style.css
+++ b/css/style.css
@@ -6,5 +6,25 @@ html,
 
 body {
   font-size: 62.5%;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: blue; }
+  font-family: Arial, Helvetica, sans-serif; }
+
+.search {
+  display: flex;
+  align-items: center; }
+  .search__input {
+    border: none;
+    margin-left: 0.8rem;
+    height: 1.4rem;
+    margin-top: 0.2rem; }
+  .search__icon {
+    font-size: 1.1rem; }
+
+.nav {
+  height: 10vh;
+  padding: 1rem; }
+  .nav__left {
+    display: flex;
+    flex-direction: row;
+    align-items: center; }
+  .nav__options {
+    font-size: 1.3rem; }
