--- a/css/style.css
+++ b/css/style.css
@@ -14,17 +14,38 @@ body {
   .search__input {
     border: none;
     margin-left: 0.8rem;
-    height: 1.4rem;
-    margin-top: 0.2rem; }
+    height: 1.4rem; }
   .search__icon {
     font-size: 1.1rem; }
 
 .nav {
   height: 10vh;
-  padding: 1rem; }
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 78vw;
+  margin-left: 11vw; }
   .nav__left {
     display: flex;
     flex-direction: row;
     align-items: center; }
+  .nav__right span {
+    font-size: 0.7rem;
+    margin: 1rem; }
   .nav__options {
-    font-size: 1.3rem; }
+    font-size: 0.7rem; }
+    .nav__options-item {
+      margin: 1rem;
+      cursor: pointer; }
+
+.sale {
+  color: #df0303; }
+
+.catagories {
+  color: #0ac27b; }
+
+.nav__logo {
+  font-size: 1.4rem;
+  font-weight: 700;
+  align-self: flex-end; }
