--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,12 @@ body {
   font-size: 62.5%;
   font-family: Arial, Helvetica, sans-serif; }
 
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
 .search {
   display: flex;
   align-items: center; }
@@ -19,13 +25,12 @@ body {
     font-size: 1.1rem; }
 
 .nav {
-  height: 10vh;
+  min-height: 10vh;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 78vw;
-  margin-left: 11vw; }
+  margin-top: 0.2rem; }
   .nav__left {
     display: flex;
     flex-direction: row;
@@ -48,4 +53,14 @@ body {
 .nav__logo {
   font-size: 1.4rem;
   font-weight: 700;
-  align-self: flex-end; }
+  margin-left: -5rem; }
+
+hr {
+  border: 1px solid #e7e7e7;
+  width: 90%;
+  margin-left: 5%; }
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap; }
