--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
 @import "./base/global";
+@import "./components/card";
 @import "./components/search";
 @import "./sections/nav";
+@import "./sections/cards";
