--- a/sass/sections/_nav.scss
+++ b/sass/sections/_nav.scss
@@ -1,11 +1,10 @@
 .nav {
-	height: 10vh;
+	min-height: 10vh;
 	padding: 1rem;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 78vw;
-	margin-left: 11vw;
+	margin-top: 0.2rem;
 
 	&__left {
 		display: flex;
@@ -41,5 +40,11 @@
 .nav__logo {
 	font-size: 1.4rem;
 	font-weight: 700;
-	align-self: flex-end;
+	margin-left: -5rem;
+}
+
+hr {
+	border: 1px solid rgb(231, 231, 231);
+	width: 90%;
+	margin-left: 5%;
 }
