--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,4 +3,34 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	// max-height: 250px;
+
+	&__image {
+		// max-height: 50%;
+	}
+
+	&__mfg {
+		font-size: 1.6rem;
+		margin-bottom: 0.2rem;
+	}
+
+	&__name {
+		font-size: 1.3rem;
+		font-weight: 200;
+		margin-bottom: 1rem;
+	}
+
+	&__price {
+		font-size: 1.3rem;
+		font-weight: 200;
+		margin-bottom: 0.5rem;
+	}
+
+	&__button {
+		padding: 0.6rem 1.2rem;
+		background-color: rgb(249, 248, 246);
+		border-radius: 3px;
+		line-height: 1.8rem;
+		box-shadow: 0.1rem 0.1rem 0.1rem rgba($color: #000000, $alpha: 0.1);
+	}
 }
