--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,5 @@
 @import "./base/global";
+@import "./base/layout";
 @import "./components/card";
 @import "./components/search";
 @import "./sections/nav";
