progress on menu

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -3,10 +3,10 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	// max-height: 250px;
+	max-height: 300px;
 
 	&__image {
-		// max-height: 50%;
+		max-height: 50%;
 	}
 
 	&__mfg {
