--- a/css/style.css
+++ b/css/style.css
@@ -13,14 +13,14 @@ body {
   display: grid;
   grid-template-columns: 2fr 5fr; }
 
-.cards {
-  grid-column: 0/7; }
-
 .card {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  max-height: 300px; }
+  .card__image {
+    max-height: 50%; }
   .card__mfg {
     font-size: 1.6rem;
     margin-bottom: 0.2rem; }
@@ -89,3 +89,9 @@ hr {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap; }
+
+.left {
+  background-color: #e4e4e4;
+  height: 100%;
+  width: 100%;
+  margin-top: 3.7rem; }
